# xarray-katdal

./: LICENSE  README.rst  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
doc/source/: changelog.rst
src/xarray_katdal/: corr_products.py  entrypoint.py  katdal_import.py  meerkat_antennas.py  mock_dataset.py  msv2_facade.py  transpose.py  uvw.py
tests/: conftest.py  test_chunkstore.py
